# This Cargo.toml is here to let externals tools (IDEs, etc.) know that this is
# a Rust project. Your extensions depedencies should be added to the Cargo.toml
# in the ext/ directory.

[workspace]
members = ["ext/commonmarker"]
resolver = "2"

[patch.crates-io]
rb-sys = { git = "https://github.com/triaxx/rb-sys", rev = "1a592c31" }
